# adsp.template

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
adsp.template/: ADSPHelpers.cpp  ADSPHelpers.h  GUIDialogBase.cpp  addon.xml  client.cpp
adsp.template/Addon/MVC/Interfaces/: MVCObject.hpp
adsp.template/Addon/MVC/Interfaces/Controller/: IController.hpp
adsp.template/Addon/MVC/Interfaces/Model/: IModel.hpp  IParameter.hpp
adsp.template/Addon/MVC/Interfaces/View/: IKodiGUIView.hpp  IView.hpp
adsp.template/Addon/MVC/Model/: TParameter.hpp
adsp.template/Addon/MessageSystem/Communication/: ActorProtocol.cpp  ActorProtocol.h  Message.cpp  Message.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp
adsp.template/Addon/MessageSystem/Interfaces/: ISocket.hpp
adsp.template/Addon/MessageSystem/Sockets/: TSocketClassMethodCallback.hpp  TSocketForward.hpp  TSocketMemcpy.hpp  TSocketRangeCheck.hpp
adsp.template/Addon/Process/: AddonProcessManager.cpp  AddonProcessManager.hpp  IAddonProcess.hpp
adsp.template/Addon/Utils/: EnumIDsToString.hpp  TCreationStatistics.hpp
adsp.template/AddonExceptions/: TAddonException.h
adsp.template/AudioDSP/FactoryADSPModes/: FactoryADSPModes.cpp  FactoryADSPModes.hpp  IADSPMode.hpp
adsp.template/AudioDSP/Streams/: ADSPStream.cpp  ADSPStreamBuilderAll.cpp  ADSPStreamManager.cpp
adsp.template/Settings/: ISettingsElement.h  SettingsHelpers.cpp  SettingsManager.h
adsp.template/configuration/: templateConfiguration.h
adsp.template/resources/language/English/: strings.po
adsp.template/resources/language/German/: strings.po
adsp.template/resources/skins/Confluence/720p/: DialogMainGain.xml
adsp.template/resources/skins/media/volume/: volume_credits.txt
adsp.template/resources/skins/skin.estuary/1080i/: DialogGainMode.xml
debian/: changelog  changelog.in  control  rules
doxygen_resources/: Doxyfile.doxy
src/: ADDONOptional.cpp  ADDONOptional.h  ADSPModeInfos.cpp  ADSPModeInfos.h  CpyModesProcess.cpp  CpyModesProcess.hpp  DSPProcessor.cpp  DSPProcessor.h  EnumStrIDs.cpp  EnumStrIDs.hpp  GainModeEnvironment.cpp  GainModeEnvironment.hpp  InputResampleCpy.cpp  InputResampleCpy.hpp  InputResampleCpyModeSettings.cpp  InputResampleCpyModeSettings.hpp  PostProcessCpy.cpp  PostProcessCpy.hpp  PostProcessCpyModeSettings.cpp  PostProcessCpyModeSettings.hpp  PreProcessCpy.cpp  PreProcessCpy.hpp  PreProcessCpyModeSettings.cpp  PreProcessCpyModeSettings.hpp  channelUpmixer.cpp  channelUpmixer.h
src/Dialogs/: GUIDialogMasterProcess.cpp  GUIDialogMasterProcess.h  GUIDialogOutputResample.cpp  GUIDialogOutputResample.h  GUIDialogPostProcess.cpp  GUIDialogPostProcess.h  GUIDialogPreProcess.cpp  GUIDialogPreProcess.h
src/GainMode/: GainMode.cpp  GainMode.hpp  GainModeController.cpp  GainModeController.hpp  GainModeControllerMessages.cpp  GainModeControllerMessages.hpp  GainModeDialog.cpp  GainModeDialog.hpp  GainModeDialogMessages.cpp  GainModeDialogMessages.hpp  GainModeDialogSettings.cpp  GainModeDialogSettings.hpp  GainModeMessages.cpp  GainModeMessages.hpp  GainModeModel.cpp  GainModeModel.hpp  GainModeModelMessages.cpp  GainModeModelMessages.hpp  GainModeSettings.cpp  GainModeSettings.hpp
src/KodiThreads/: CMakeLists.txt  system.cpp
src/KodiThreads/commons/: Exception.h
src/KodiThreads/threads/: Thread.cpp
src/KodiThreads/threads/platform/pthreads/: ThreadImpl.cpp
src/KodiThreads/threads/platform/win/: ThreadImpl.cpp  Win32Exception.cpp
src/PostProcessGain/: PostProcessGain.cpp  PostProcessGain.hpp  PostProcessGainMessages.cpp  PostProcessGainMessages.hpp  PostProcessGainModeDialog.cpp  PostProcessGainModeDialog.hpp  PostProcessGainModeDialogSettings.cpp  PostProcessGainModeDialogSettings.hpp  PostProcessGainModeSettings.cpp  PostProcessGainModeSettings.hpp  PostProcessGainModel.cpp  PostProcessGainModel.hpp  PostProcessGainModelMessages.cpp  PostProcessGainModelMessages.hpp  PostProcessGainParameterIDs.cpp  PostProcessGainParameterIDs.hpp
src/template/: ADSPAddonHandler.cpp  ADSPHelpers.cpp  ADSPHelpers.h  ADSPProcessorHandle.cpp  AddonHelpers.cpp  AudioDSPSettings.cpp  CMakeLists.txt  GUIDialogBase.cpp  IADDONOptional.cpp  IADSPProcessor.cpp  client.cpp  doxygenDocu.h
src/template/Addon/MVC/Interfaces/Model/: IModel.hpp  IParameter.hpp
src/template/Addon/MVC/Interfaces/View/: ActionIDs.hpp  IView.hpp
src/template/Addon/MVC/Model/: TParameter.hpp
src/template/Addon/MessageSystem/Communication/: ActorProtocol.h  Message.cpp  Message.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp
src/template/Addon/MessageSystem/Interfaces/: IPortPool.hpp  IProtocol.hpp  ISocket.hpp
src/template/Addon/MessageSystem/Sockets/: TSocketClassMethodCallback.hpp  TSocketMemcpy.hpp
src/template/Addon/Process/: AddonProcessManager.cpp  AddonProcessManager.hpp  IAddonProcess.hpp
src/template/Addon/Utils/: TCreationStatistics.hpp
src/template/AddonExceptions/: IAddonException.h
src/template/AudioDSP/FactoryADSPModes/: FactoryADSPModes.cpp  FactoryADSPModes.hpp  IADSPMode.hpp  TStatisticsADSPModes.hpp
src/template/AudioDSP/Streams/: ADSPStream.cpp  ADSPStream.hpp  ADSPStreamBuilderAll.cpp  ADSPStreamBuilderAll.hpp  ADSPStreamManager.cpp  ADSPStreamManager.hpp  IADSPStreamBuilder.hpp
src/template/Settings/: SettingsHelpers.h  SettingsManager.cpp  SettingsManager.h  TSettingsElement.h
src/template/configuration/: templateConfiguration.cpp  templateConfiguration.h
src/template/include/: ADSPAddonHandler.h  ADSPProcessorHandle.h  GUIDialogBase.h  IADDONOptional.h  IADSPProcessor.h  MACROHelper.h  checkTemplateConfig.h  client.h
src/utils/: stdStringUtils.h
